# demod-dsp-gui

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  flake.nix  result
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.hpp  chiptune.cpp  chiptune.hpp  faust_bridge.cpp  faust_bridge.hpp
src/core/: config.hpp  engine.cpp  engine.hpp  preset.cpp  preset.hpp
src/input/: bci_device.cpp  bci_device.hpp  device.hpp  gamepad_device.cpp  gamepad_device.hpp  input_manager.cpp  input_manager.hpp  keyboard_device.cpp  keyboard_device.hpp
src/renderer/: font.cpp  font.hpp  renderer.cpp  renderer.hpp  widgets.cpp  widgets.hpp
src/terminal/: terminal.cpp  terminal.hpp
src/ui/: editor_screen.cpp  editor_screen.hpp  fx_chain_screen.cpp  fx_chain_screen.hpp  help_screen.cpp  help_screen.hpp  main_menu.cpp  main_menu.hpp  param_screen.cpp  param_screen.hpp  screen.hpp  settings_screen.cpp  settings_screen.hpp  viz_screen.cpp  viz_screen.hpp
tests/: CMakeLists.txt  test_chiptune.cpp  test_editor_syntax.cpp  test_faust_bridge.cpp  test_fx_chain.cpp  test_input.cpp  test_preset.cpp  test_renderer.cpp  test_terminal.cpp
tests/mocks/: mock_device.hpp
